RESOLVED FIXED146169
Extremely large canvas crashes on pre-El Capitan machines
https://bugs.webkit.org/show_bug.cgi?id=146169
Summary Extremely large canvas crashes on pre-El Capitan machines
Dean Jackson
Reported 2015-06-19 16:31:21 PDT
Extremely large canvas crashes on pre-El Capitan machines
Attachments
Patch (2.99 KB, patch)
2015-06-19 16:34 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2015-06-19 16:32:09 PDT
Dean Jackson
Comment 2 2015-06-19 16:34:08 PDT
Dean Jackson
Comment 3 2015-06-19 16:47:40 PDT
David Kilzer (:ddkilzer)
Comment 4 2015-06-20 08:12:49 PDT
(In reply to comment #3) > Committed r185779: <http://trac.webkit.org/changeset/185779> Follow-up fixes to layout tests: http://trac.webkit.org/r185787 http://trac.webkit.org/r185792 http://trac.webkit.org/r185793 There will be at least one more layout test fix as some canvas tests are still failing on El Capitan and Windows (and other ports) after the above.
David Kilzer (:ddkilzer)
Comment 5 2015-06-20 09:50:55 PDT
(In reply to comment #4) > (In reply to comment #3) > > Committed r185779: <http://trac.webkit.org/changeset/185779> > > Follow-up fixes to layout tests: > > http://trac.webkit.org/r185787 > http://trac.webkit.org/r185792 > http://trac.webkit.org/r185793 > > There will be at least one more layout test fix as some canvas tests are > still failing on El Capitan and Windows (and other ports) after the above. Hopefully the last one: http://trac.webkit.org/r185798
Note You need to log in before you can comment on or make changes to this bug.