Extremely large canvas crashes on pre-El Capitan machines https://bugs.webkit.org/show_bug.cgi?id=146169 <rdar://problem/21410046>

Reviewed by Tim Horton.

Source/WebCore:

On machines before El Capitan, make the maximum canvas size
8k by 8k.

Covered by existing tests.

* html/HTMLCanvasElement.cpp:

LayoutTests:

Un-skip fast/canvas/canvas-too-large-to-draw.html.

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/164222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185779 268f45cc-cd09-0410-ab3c-d52691b4dbfc